api/crates/postgres/tests/integration/media/snapshots/integration__media__fetch_all_with_replicas____test_context_wrapped_until_asc_succeeds.snap
---
source: crates/postgres/tests/integration/media/fetch_all_with_replicas.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
WHERE
  ("created_at", "id") < ($1, $2)
ORDER BY
  "created_at" DESC,
  "id" DESC
LIMIT
  $3'''
rows_affected = 2
rows_returned = 2

[[queries]]
sql = '''
SELECT
  "replicas"."id" AS "replica_id",
  "replicas"."medium_id" AS "replica_medium_id",
  "replicas"."display_order" AS "replica_display_order",
  "replicas"."original_url" AS "replica_original_url",
  "replicas"."mime_type" AS "replica_mime_type",
  "replicas"."width" AS "replica_width",
  "replicas"."height" AS "replica_height",
  "replicas"."phase" AS "replica_phase",
  "replicas"."created_at" AS "replica_created_at",
  "replicas"."updated_at" AS "replica_updated_at",
  "thumbnails"."id" AS "thumbnail_id",
  "thumbnails"."width" AS "thumbnail_width",
  "thumbnails"."height" AS "thumbnail_height",
  "thumbnails"."created_at" AS "thumbnail_created_at",
  "thumbnails"."updated_at" AS "thumbnail_updated_at"
FROM
  "replicas"
LEFT JOIN
  "thumbnails" ON "replicas"."id" = "thumbnails"."replica_id"
WHERE
  "medium_id" IN ($1, $2)
ORDER BY
  "medium_id" ASC,
  "display_order" ASC'''
rows_affected = 2
rows_returned = 2
